--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="css/Normalize.css" />
-    <link rel="stylesheet" type="text/css" href="css/second-project.css" />
+    <link rel="stylesheet" type="text/css" href="Normalize.css" />
+    <link rel="stylesheet" type="text/css" href="Second-project.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -199,56 +199,56 @@
       </div>
       <div class="photos">
         <div class="photo-container">
-          <img src="/Images/shuffle-01.jpg" />
+          <img src="shuffle-01.jpg" />
           <div class="photo-text">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="photo-container">
-          <img src="/Images/shuffle-02.jpg" />
+          <img src="shuffle-02.jpg" />
           <div class="photo-text">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="photo-container">
-          <img src="/Images/shuffle-03.jpg" />
+          <img src="shuffle-03.jpg" />
           <div class="photo-text">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="photo-container">
-          <img src="/Images/shuffle-04.jpg" />
+          <img src="shuffle-04.jpg" />
           <div class="photo-text">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="photo-container">
-          <img src="/Images/shuffle-05.jpg" />
+          <img src="shuffle-05.jpg" />
           <div class="photo-text">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="photo-container">
-          <img src="/Images/shuffle-06.jpg" />
+          <img src="shuffle-06.jpg" />
           <div class="photo-text">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="photo-container">
-          <img src="/Images/shuffle-07.jpg" />
+          <img src="shuffle-07.jpg" />
           <div class="photo-text">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="photo-container">
-          <img src="/Images/shuffle-08.jpg" />
+          <img src="shuffle-08.jpg" />
           <div class="photo-text">
             <h4>Awesome Image</h4>
             <p>Photography</p>
@@ -256,7 +256,7 @@
         </div>
       </div>
       <div class="more">
-        <a href="#home"><img src="/Images/button_more.jpg" /></a>
+        <a href="#home"><img src="button_more.jpg" /></a>
       </div>
     </section>
     <!--end-of-portfolio-->
