--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <!--start-of-design-->
     <section class="design-over">
       <section class="design" id="design">
-        <div class="img"><img src="/Images/mobile.png" /></div>
+        <div class="img"><img src="mobile.png" /></div>
         <div class="design-text">
           <div class="design-content">
             <h2>OUR DESIGN COMES WITH...</h2>
