--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="home">
       <div class="back">
         <div class="container">
-          <div class="logo"><img src="Images/logo.png" /></div>
+          <div class="logo"><img src="logo.png" /></div>
           <div class="links">
             <div class="bar">
               <div class="menu">
